mq-ingress/nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iib-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: iib-nginx
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: IfNotPresent
        name: iib-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: iib-nginx-config
          mountPath: /etc/nginx/conf.d
      # Load the configuration files for nginx
      volumes:
        - name: iib-nginx-config
          configMap:
            name: iib-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: iib-ingress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: iib-ingress
